--- a/app/views/comments/_hide_comments.html.erb
+++ b/app/views/comments/_hide_comments.html.erb
@@ -23,7 +23,7 @@
               </p>
             </div>
           </div>
-          <%= f.text_area :message,  placeholder: "通報内容を記載いしてください。",id: "message", class: "form-control" %><br>
+          <%= f.text_area :message,  placeholder: "通報内容を記載してください。",id: "message", class: "form-control" %><br>
           <div class="modal-footer">
             <%= f.submit "送信", class: "btn btn-lg btn-danger fw-bold border-white", style: "margin-right: 10px; width: 150px;color:#FFF" %>
             <%= f.submit "クリア", type: :reset, class: "btn btn-lg btn-secondary fw-bold border-white", style: "margin-right: 10px; width: 150px;color:#FFF" %>
