--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -28,7 +28,7 @@
             </div>
           </div>
           </div>
-          <%= f.text_area :message,  placeholder: "通報内容を記載いしてください。",id: "message", class: "form-control mt-3" %><br>
+          <%= f.text_area :message,  placeholder: "通報内容を記載してください。",id: "message", class: "form-control mt-3" %><br>
           <div class="modal-footer">
             <%= f.submit "送信", class: "btn btn-lg btn-danger fw-bold border-white", style: "margin-right: 10px; width: 150px;color:#FFF" %>
             <%= f.submit "クリア", type: :reset, class: "btn btn-lg btn-secondary fw-bold border-whitey", style: "margin-right: 10px; width: 150px;color:#FFF" %>
