怪しいブログは信じないようにしましょう！

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_pack_tag 'chats', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'chats', media: 'all', 'data-turbolinks-track': 'reload' %>
 <script>
     document.addEventListener("DOMContentLoaded",function bottom_scroll(){
         var elm = document.documentElement;
