--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_pack_tag 'communities', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'communities', media: 'all', 'data-turbolinks-track': 'reload' %>
 <div class="position-relative overflow-hidden p-1 p-md-5 m-md-3 text-center bg-light">
   <div class="col-md-5 p-lg-1 mx-auto my-1">
       <%= image_tag @community.decorate.image, class: "img-fluid rounded", style: "width: 150px;height: 150px;" %>
