--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_pack_tag 'registrations', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'registrations', media: 'all', 'data-turbolinks-track': 'reload' %>
 <div class="register">
   <h1 style= "margin-bottom: 50px">新規登録</h1>
 
