--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_pack_tag 'pages', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'pages', media: 'all', 'data-turbolinks-track': 'reload' %>
 <div class="text-center">
   <p class="notice"><%= notice %></p>
   <h3 class="notice"><%= alert %></h3>
