--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_pack_tag 'profiles' %>
+<%= stylesheet_link_tag 'profiles' %>
 <%= javascript_pack_tag 'profiles/edit' %>
 
 <script>
