--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_pack_tag 'profiles', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'profiles', media: 'all', 'data-turbolinks-track': 'reload' %>
 <div class="container">
   <div class="d-flex align-items-center p-3 my-3 text-dark bg-light rounded shadow-sm">
     <div class="lh-1">
