--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_pack_tag 'timelines', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'timelines', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= javascript_pack_tag 'timeline/main', 'data-turbolinks-track': 'reload' %>
 
 <%= render 'timelines/nav' %>
