--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_pack_tag 'help', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'help', media: 'all', 'data-turbolinks-track': 'reload' %>
 <div class="container">
   <div class="row">
     <div class="col-md-3">
