--- a/app/views/profiles/_page.html.erb
+++ b/app/views/profiles/_page.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_pack_tag 'profiles', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'profiles', media: 'all', 'data-turbolinks-track': 'reload' %>
 <div class="container">
   <h2 class="text-center pb-2 mb-0"><%= name %> (<%= content.size %>)</h2>
   <div class="my-3 p-3 bg-white rounded shadow-sm">
