--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_pack_tag 'timeline' %>
+<%= stylesheet_link_tag 'timeline' %>
 <%= javascript_pack_tag 'timeline/main' %>
 <style>
     #back {
