--- a/app/views/timelines/search.html.erb
+++ b/app/views/timelines/search.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_pack_tag 'timelines'%>
+<%= stylesheet_link_tag 'timelines'%>
 <%= javascript_pack_tag 'timeline/main'%>
 
 <%= render 'timelines/nav', page:"search" %>
