--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,4 +1,5 @@
 <%= stylesheet_link_tag 'chats', media: 'all', 'data-turbolinks-track': 'reload' %>
+
 <script>
     document.addEventListener("DOMContentLoaded",function bottom_scroll(){
         var elm = document.documentElement;
@@ -33,11 +34,7 @@
        <h4 class="m-0" style="float: left">
          To:
          <%= link_to profile_path(@user.userid) do %>
-           <% if @user .image.nil? %>
-             <%= image_tag "default_icon", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
-           <% else %>
-             <%= image_tag "/user_images/#{  @user .image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
-           <% end %>
+           <%= image_tag @user.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
          <% end %>
        </h4>
       <h4 id="user_name" class="m-0" style="float: left">
@@ -120,9 +117,10 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-          <input type="file" id="image_uploader" accept="image/jpg,image/jpeg,image/png" data-behavior="chat_speaker">
+          <input type="file" id="image_uploader" data-behavior="chat_speaker">
       </div>
-      <img id="image_preview" src="" style="text-align: center;" alt="">
+      <img id="image_preview" src="" style="text-align: center;" >
+      <canvas id="canvas" style="text-align: center;"></canvas>
       <div class="modal-footer">
         <label><!-- Button trigger modal -->
           <button id="image_submit_button" style="display: none" type="submit" class="btn btn-primary form-control" ></button>
