--- a/app/assets/stylesheets/chats.scss
+++ b/app/assets/stylesheets/chats.scss
@@ -6,15 +6,25 @@
   z-index: 10000;
 }
 
+.userLink{
+  text-decoration: none;
+}
 footer{
   display: none;
+}
+#user_name{
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: #f9f9f9;
 }
 
 .receiver {
   float: left;
   width: auto !important;
+  margin-left: 40px;
   padding: 4px 10px 7px !important;
-  border-radius: 10px 10px 10px 0;
+  border-radius: 0 10px 10px 10px;
   background: #ffffff;
   font-size: 16px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
@@ -106,4 +116,10 @@ footer{
   font-size: 16px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
   border: 1px solid #C6C6C6;
+}
+
+.time{
+  position:absolute;
+  bottom:0;
+  margin: 5px;
 }
