--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -11,6 +11,8 @@
 <div id="body">
   <div id="chat" style="margin:1% 1% 70px 1%">
       <div id="messages">
+        <span class="pb-3 mb-0"><strong style="color: black"><%= @user.name %> </strong></span>
+        <span class="small" style="color: gray">(<%= @user.nickname %>)</span>
         <% last_message = nil %>
         <% @message.each do |m| %>
           <% if last_message == nil %>
@@ -31,15 +33,6 @@
 
   <div class="mt-2 row messageBox reply d-flex justify-content-center">
     <div class="col-sm-12 messageBox-inner">
-       <h4 class="m-0" style="float: left">
-         To:
-         <%= link_to profile_path(@user.userid) do %>
-           <%= image_tag @user.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
-         <% end %>
-       </h4>
-      <h4 id="user_name" class="m-0" style="float: left">
-         <%=  @user.name %>
-       </h4>
        <span class="clear"></span>
        <div class="row ">
          <div class="w-100 d-flex ">
