非同期のshowのレイアウト変更+画像投稿途中

--- a/app/assets/stylesheets/chats.scss
+++ b/app/assets/stylesheets/chats.scss
@@ -117,6 +117,10 @@ footer{
   text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
   border: 1px solid #C6C6C6;
 }
+.append_time{
+  position:absolute;
+  margin: 5px;
+}
 
 .time{
   position:absolute;
