--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -42,6 +42,7 @@
            </label>
           <input type="hidden" id="room_id" value= <%= @room.id %> data-behavior="chat_speaker">
           <input type="hidden" id="user_id" value= <%= current_user.id %> data-behavior="chat_speaker">
+           <input type="hidden" id="partner_image" value= <%= @user.image %> data-behavior="chat_speaker">
           <%= text_area_tag  :content, nil, class:"form-control", placeholder:"message", data: {behavior: "chat_speaker"},id:"content" %>
           <label><!-- Button trigger modal -->
              <button id="submit_button" style="display: none" type="submit" class="btn btn-primary form-control" ></button>
@@ -111,12 +112,12 @@
       </div>
       <div class="modal-body">
           <input type="file" id="image_uploader" data-behavior="chat_speaker">
+        <input type="hidden" id="send_image" value="" data-behavior="chat_speaker">
       </div>
-      <img id="image_preview" src="" style="text-align: center;" >
       <canvas id="canvas" style="text-align: center;"></canvas>
       <div class="modal-footer">
         <label><!-- Button trigger modal -->
-          <button id="image_submit_button" style="display: none" type="submit" class="btn btn-primary form-control" ></button>
+          <button id="image_submit_button" tyle="display: none" type="submit" class="btn btn-primary form-control" ></button>
           <span class="m-1" style="font-size: 1.6rem;color: #1b8798"><i class="fas fa-paper-plane"></i></span>
         </label>
       </div>
