なんでぜんぶもどってるねん

--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'chats', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_pack_tag 'chats', media: 'all', 'data-turbolinks-track': 'reload' %>
 <h4 class="chat_heading">Chat</h4>
 <div class="m-3">
 <% num = 0
