--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div id="comments_area">
-    <%= render 'comments/index', post: @post %>
+    <%= render 'comments/index', comments: @comments, count:@count %>
   </div>
   <%= render "layouts/pagenate", pagenate: @comments %>
 </div>
