--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -106,19 +106,19 @@
           <span class="text-dark"><%= post.comments.size %></span>
         <% end %>
       </span>
-          <span class="ms-2">
-            <label>
-              <button type="button" class="btn btn-primary" style="display: none" data-bs-toggle="modal" data-bs-target="#exampleModal<%= post.id %>" data-bs-whatever=<%= post.id %>></button>
-              <i class="fas fa-bullhorn" style="color: red"></i>
-            </label>
-      </span>
         </div>
-        <div>
+          <div class="d-flex">
           <% if post.user == current_user %>
             <%= button_to(timeline_path(post.id), class: "send bg-white", method: :delete, data: { disable_with: "削除中..." }) do %>
               <i class="far fa-trash-alt"></i>
             <% end %>
           <% end %>
+          <span class="ms-2">
+            <label>
+              <button type="button" class="btn btn-primary" style="display: none" data-bs-toggle="modal" data-bs-target="#exampleModal<%= post.id %>" data-bs-whatever=<%= post.id %>></button>
+              <i class="fas fa-bullhorn" style="color: red"></i>
+            </label>
+          </span>
         </div>
       </div>
     </div>
