--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -113,13 +113,15 @@
             <%= button_to(timeline_path(post.id), class: "send bg-white", method: :delete, data: { disable_with: "削除中..." }) do %>
               <i class="far fa-trash-alt"></i>
             <% end %>
-          <% end %>
-          <span class="ms-2">
+          <% else %>
+            <span class="ms-2">
             <label>
               <button type="button" class="btn btn-primary" style="display: none" data-bs-toggle="modal" data-bs-target="#exampleModal<%= post.id %>" data-bs-whatever=<%= post.id %>></button>
               <i class="fas fa-bullhorn" style="color: red"></i>
             </label>
           </span>
+          <% end %>
+
         </div>
         </div>
       </div>
