--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -113,12 +113,12 @@
       </div>
       <div class="modal-body">
           <input type="file" id="image_uploader" data-behavior="chat_speaker">
-        <input type="hidden" id="send_image" value="" data-behavior="chat_speaker">
+        <input type="hidden" id="send_image" value="" >
       </div>
       <canvas id="canvas" style="text-align: center;"></canvas>
       <div class="modal-footer">
         <label><!-- Button trigger modal -->
-          <button id="image_submit_button" tyle="display: none" type="submit" class="btn btn-primary form-control" ></button>
+          <button id="image_submit_button" style="display: none" type="submit" class="btn btn-primary form-control" ></button>
           <span class="m-1" style="font-size: 1.6rem;color: #1b8798"><i class="fas fa-paper-plane"></i></span>
         </label>
       </div>
