--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,53 +1,54 @@
 <% visitor = notification.visitor %>
 <% visited = notification.visited %>
-<div class="col-md-6 mx-auto">
+<div class="p-3 my-3 text-dark bg-blue rounded shadow-sm">
   <div class="form-inline">
 
-    <%= link_to profile_path(visitor.userid) do %>
+    <%= link_to profile_path(visitor.userid), class: "text-decoration-none" do %>
       <%= image_tag visitor.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "30px", height: "30px" %>
-      <strong style="color:lightseagreen">
+      <strong>
         <%= visitor.name %>
-        <%= 'さんが' %>
       </strong>
-
-      <% case notification.action %>
+    <% end %>
+    <%= 'さんが' %>
+    <% case notification.action %>
     <% when 'follow' then %>
-        <strong style="color:lightseagreen">
-          <%= "あなたをフォローしました" %>
-        </strong>
-        <hr style="color: #4b5155">
-      <% when 'like' then %>
-        <strong style="color:lightseagreen">
+      <strong style="color:lightseagreen">
+        <%= "あなたをフォローしました" %>
+      </strong>
+      <hr style="color: #4b5155">
+    <% when 'like' then %>
+      <strong style="color:lightseagreen">
+        <%= link_to timeline_path(notification.post_id), class: "text-decoration-none" do %>
           <%= "あなたの投稿" %>
-          <%= "にいいねしました" %>
-        </strong>
-        <hr style="color: #4b5155">
-      <% when 'comment' then %>
-        <% if notification.id == visited.id %>
-          <%= "あなたの投稿:#{notification.post_id}" %>
-        <% else %>
-       <span>
-         <%= link_to timelines_path(notification.post_id) do %>
-          <%= image_tag visited.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "30px", height: "30px" %>
-           <% end %>
-            </span>
-          <strong style="color:lightseagreen">
-            <%= visited.name %>
-            <%= 'さんの投稿' %>
-            <%= "にコメントしました" %>
-          </strong>
-
-          <P class="text-muted mb-0">
-            <%= @comments.find_by(id: notification.comment_id).comment %>
-          </p>
-          <div class="small text-muted text-right">
-            <%= time_ago_in_words(notification.created_at).upcase %>
-            <hr style="color: #4b5155 ">
-          </div>
-
+        <% end %>
+        <%= "にいいねしました" %>
+      </strong>
+    <% when 'comment' then %>
+      <% if notification.id == visited.id %>
+        <%= link_to timeline_path(notification.post_id), class: "text-decoration-none" do %>
+          <%= "あなたの投稿" %>
         <% end %>
       <% else %>
+       <span>
+         <%= link_to timelines_path(notification.post_id) do %>
+           <%= image_tag visited.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "30px", height: "30px" %>
+         <% end %>
+       </span>
+       <strong style="color:lightseagreen">
+         <%= visited.name %>
+         <%= 'さんの投稿' %>
+         <%= "にコメントしました" %>
+       </strong>
+
+       <p class="text-muted mb-0">
+          <%= @comments.find_by(id: notification.comment_id).comment %>
+        </p>
+        <div class="small text-muted text-right">
+          <%= time_ago_in_words(notification.created_at).upcase %>
+        </div>
+
       <% end %>
+    <% else %>
     <% end %>
   </div>
 </div>
