--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -8,9 +8,9 @@
 
 <div class="container">
   <% if @notification.exists? %>
-    <%= render partial: "notifications/notification", collection: @pagenate, as: :notification, locals: {new_notification: @new_notification} %>
+    <%= render partial: "notifications/notification", collection: @pagenate, as: :notification, locals: { new_notification: @new_notification } %>
     <%= render "layouts/pagenate", pagenate:@pagenate %>
   <% else %>
-    <p class="text-center">通知はありません</p>
+    <p class="text-center my-4">通知はありません</p>
   <% end %>
 </div>
