masterマージによる変更

--- a/app/views/notifications/_comment.html.erb
+++ b/app/views/notifications/_comment.html.erb
@@ -1,3 +1,4 @@
+<% pp notification %>
 <% if notification.comment.post.user.id == visited.id %>
   <%= link_to timeline_path(notification.comment.post.id), class: "text-decoration-none" do %>
     <%= "あなたの投稿" %>
