--- a/app/views/comments/_hide_comments.html.erb
+++ b/app/views/comments/_hide_comments.html.erb
@@ -12,10 +12,10 @@
           <%= f.hidden_field :reported_user_id, id: "reported_user_id ", class: "form-control", value: comment.user.id %>
           <div class="my-3 p-3 bg-white rounded shadow-sm">
             <div class="d-flex text-muted">
-              <%= image_tag post.user.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
+              <%= image_tag comment.post.user.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
               <p class="pb-3 mb-0 lh-sm w-100">
-                <strong class="text-dark" style="font-size:20px;margin: 0"><%= post.user.nickname %></strong>
-                <span class="text-gray small" style="margin: 0">@<%= post.user.userid %></span>
+                <strong class="text-dark" style="font-size:20px;margin: 0"><%= comment.post.user.nickname %></strong>
+                <span class="text-gray small" style="margin: 0">@<%= comment.post.user.userid %></span>
                 <span class="text-gray small"><i class="far fa-clock clock-icon"></i><%= time_ago_in_words(comment.created_at) %></span>
                 <br/>
                 <br/>
