ヘルプ開始

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,6 +77,11 @@
                     <span class="link nav-link">設定</span>
                   <% end %>
                 </li>
+                <li>
+                  <%= link_to help_path, class: "link" do %>
+                    <span class="link nav-link">ヘルプ</span>
+                  <% end %>
+                </li>
               </ul>
             </li>
             <li class="nav-item">
