--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -10,7 +10,7 @@
                 <%= image_tag @user.decorate.image, :size => '100x100', class: "userpicimg icon flex-shrink-0 question-icon" %>
             </div>
             <div class="names">
-              <h2 class="username"><%= @user.name %></h2>
+              <h2 class="username"><%= '<i class="fas fa-crown" style="color: yellow; stroke: #82a5c8;stroke-width: 18px;"></i>'.html_safe if @user.admin %><%= @user.name %></h2>
               <p style="margin-bottom: 0">(<%= @user.nickname %>)
                 <% if following?(@user.followings_list, @current) && !matchers?(@user,@current) %>
                   <i class="fas fa-user-plus"></i>
@@ -19,7 +19,6 @@
                 <% end %>
               </p>
               <p>@<%= @user.userid %></p>
-
             </div>
           </div>
         </div>
