--- a/app/views/chats/_chat_message.html.erb
+++ b/app/views/chats/_chat_message.html.erb
@@ -6,7 +6,7 @@
         <div class="sender my-1 p-1 mt-2" style="max-width: 40%;">
           <div class="messages container p-1">
             <% if message.image != nil %>
-                <%= image_tag message.decorate.images ,style:"max-width:100%" %>
+                <%= image_tag message.decorate.images ,style:"max-width:100%", "data-lity" => "data-lity" %>
             <% else %>
            <% start = message.content.index("http")%>
             <div>
@@ -54,7 +54,7 @@
           <div class="receiver my-1 p-1 mt-2" style="max-width: 40%;" >
           <div class="messages container p-1">
             <% if message.image != nil %>
-              <%= image_tag message.decorate.images ,style:"max-width:100%" %>
+              <%= image_tag message.decorate.images ,style:"max-width:100%", "data-lity" => "data-lity" %>
             <% else %>
             <% start = message.content.index("http")%>
             <div>
@@ -71,7 +71,7 @@
                       <%= safe_join(messages.split("\n"),tag(:br))%>
                     <% end %>
                     <% if message.image != nil %>>
-                      <%= image_tag message.decorate.images, style: "float: left;", width: "25%", height: "25%"%>
+                      <%= image_tag message.decorate.images, style: "float: left;", width: "25%", height: "25%", "data-lity" => "data-lity"%>
                     <% end %>
                   <% else %>
                     <% first = messages[0..start.to_i-1] %>
