ヘルプのルート削除

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -16,8 +16,6 @@
           <p class="list-group-item">
             <span class="badge badge-success badge-icon badge-fw pull-left"></span><%= link_to "Q&A", faq_path %>
           </p>
-          <p class="list-group-item">
-            <span class="badge badge-warning badge-icon badge-fw pull-left"></span><%= link_to "ヘルプ", about_path %></p>
         </div>
 
       </div>
@@ -62,6 +60,17 @@
                           </h6>
                         </div>
                         <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#faqAccordion">
+                          <div class="card-body">
+                            <p>A.バッチには特別な効果はありません。バッジはAmicaの一つの遊び要素です。</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="card border-0 wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
+                        <div class="card-header" id="headingThree">
+                          <h6 data-bs-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false" aria-controls="collapseThree">Q.バッジに何か効果はありますか？<span class="lni-chevron-up"></span>
+                          </h6>
+                        </div>
+                        <div class="collapse" id="collapseFour" aria-labelledby="headingThree" data-parent="#faqAccordion">
                           <div class="card-body">
                             <p>A.バッチには特別な効果はありません。バッジはAmicaの一つの遊び要素です。</p>
                           </div>
