--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -48,7 +48,9 @@
       <%= link_to "チャット", chats_path, class: "btn btn-outline-dark mx-2" %>
       <%= link_to "編集", edit_community_path, class: "btn btn-outline-dark mx-2" %>
       <% if is_community_favorite?(@favorite, @user, @community) %>
-        <%= link_to "お気に入り解除", page_favorite_community_delete_path(@user.id, page_id: @community.id), method: :delete, class: 'btn btn-outline-dark mx-2 bg-dark text-light', style: "", data: { disable_with: 'お気に入り解除' } %>
+        <%= link_to page_favorite_community_delete_path(@user.id, page_id: @community.id), method: :delete, class: 'btn btn-outline-dark mx-2 bg-dark text-light', style: "", data: { disable_with: 'お気に入り解除' } do %>
+          <i class="fas fa-star fa-2x"></i>
+        <% end %>
       <% else %>
         <%= link_to page_favorite_community_create_path(@community.id), method: :post, class: 'mx-2', style: "", data: { disable_with: 'お気に入り登録' } do %>
           <i class="far fa-star fa-2x"></i>
@@ -58,18 +60,22 @@
       <% if @join %>
         <%= link_to "チャット", chats_path, class: "btn btn-outline-dark mx-2" %>
         <%= link_to "脱退", community_manage_path(@community.id, current_user.id), method: :delete, class: "btn btn-outline-dark mx-2", data: { confirm: "本当に脱退しますか？" } %>
-        <% if is_community_favorite?(@favorite, @user, @community) %>
-          <%= link_to "お気に入り解除", page_favorite_community_delete_path(@user.id, page_id: @community.id), method: :delete, class: 'btn btn-outline-dark mx-2 bg-dark text-light', style: "", data: { disable_with: 'お気に入り解除' } %>
-        <% else %>
-          <%= link_to "お気に入り登録", page_favorite_community_create_path(@community.id), method: :post, class: 'btn btn-outline-dark mx-2', style: "", data: { disable_with: 'お気に入り登録' } %>
-        <% end %>
-        <div class="ms-2">
-          <label>
-            <button type="button" class="btn btn-primary" style="display: none" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever=
-              <% @community.id %>></button>
-            <i class="fas fa-bullhorn" style="color: red"></i>
-          </label>
-        </div>
+          <% if is_community_favorite?(@favorite, @user, @community) %>
+            <%= link_to page_favorite_community_delete_path(@user.id, page_id: @community.id), method: :delete, class: 'mx-2 fav_star', style: "font", data: { disable_with: 'お気に入り解除' } do %>
+            <i class="fas fa-star fa-2x"></i>
+            <% end %>
+          <% else %>
+            <%= link_to page_favorite_community_create_path(@community.id), method: :post, class: 'mx-2 fav_star', style: "", data: { disable_with: 'お気に入り登録' } do %>
+              <i class="far fa-star fa-2x"></i>
+            <% end %>
+            <span class="report_icon mx-2">
+              <label>
+                <button type="button" class="btn btn-primary" style="display: none" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever=
+                  <% @community.id %>></button>
+                <i class="fas fa-bullhorn fa-2x" style="color: red"></i>
+              </label>
+            </span>
+          <% end %>
       <% else %>
         <%= link_to "参加", community_manage_index_path(@community.id), method: :post, class: "btn btn-outline-dark" %>
       <% end %>
