--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -7,15 +7,15 @@
         <div class="userprofile social">
           <div class="userdata">
             <div class="userpic">
-                <%= image_tag @user.decorate.image, :size => '100x100', class: "userpicimg icon flex-shrink-0 question-icon" %>
+              <%= image_tag @user.decorate.image, :size => '100x100', class: "userpicimg icon flex-shrink-0 question-icon" %>
             </div>
             <div class="names">
               <h2 class="username"><%= '<i class="fas fa-crown" style="color: yellow; stroke: #82a5c8;stroke-width: 18px;"></i>'.html_safe if @user.admin %><%= @user.name %></h2>
               <p style="margin-bottom: 0">(<%= @user.nickname %>)
-                <% if following?(@user.followings_list, @current) && !matchers?(@user,@current) %>
+                <% if following?(@user.followings_list, @current) && !matchers?(@user, @current) %>
                   <i class="fas fa-user-plus"></i>
-                <% elsif matchers?(@user,@current) %>
-                    <i class="fas fa-user-friends"></i>
+                <% elsif matchers?(@user, @current) %>
+                  <i class="fas fa-user-friends"></i>
                 <% end %>
               </p>
               <p>@<%= @user.userid %></p>
@@ -55,16 +55,15 @@
           <div class="actions">
             <% if current_user.id != @user.id %>
               <% if following?(@following, @user) %>
-                  <%= link_to 'フォロー解除', profile_relationship_path(@user.userid), method: :delete, style: "color:#FFF;", class: "btn btn-primary followbtn" %>
+                <%= link_to 'フォロー解除', profile_relationship_path(@user.userid), method: :delete, style: "color:#FFF;", class: "btn btn-primary followbtn" %>
               <% else %>
-                  <%= link_to 'フォロー', profile_relationships_path(@user.userid), method: :post, style: "color:#FFF;", class: "btn btn-primary followbtn" %>
+                <%= link_to 'フォロー', profile_relationships_path(@user.userid), method: :post, style: "color:#FFF;", class: "btn btn-primary followbtn" %>
               <% end %>
-              <%= link_to 'チャット',chat_path(@user.userid),style: "color:#FFF;",class:"btn btn-primary followbtn"%>
+              <%= link_to 'チャット', chat_path(@user.userid), style: "color:#FFF;", class: "btn btn-primary followbtn" %>
             <% else %>
               <%= link_to '編集', edit_profile_path, style: "color:#FFF;", class: "btn btn-primary followbtn" %>
             <% end %>
           </div>
-
         </div>
       </div>
     </div>
@@ -72,7 +71,17 @@
   <!-- /.col-md-12 -->
   <div class="row d-flex justify-content-around center-block">
 
-    <div class="col-md-3 col-sm-12 w-100">
+    <div class="col-md-12">
+      <div class="panel panel-default">
+        <div class="panel-heading m-3">
+          <h3 class="page-header">自己紹介</h3>
+          <p class="page-subtitle">
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-12">
       <div class="panel panel-default">
         <div class="panel-heading m-3">
           <h3 class="page-header">バッジ</h3>
@@ -81,7 +90,7 @@
       </div>
     </div>
 
-    <div class="col-md-3 col-sm-12 w-100">
+    <div class="col-md-12">
       <div class="panel panel-default">
         <div class="panel-heading m-3">
           <h3 class="page-header">取得資格</h3>
@@ -91,7 +100,6 @@
                 <span><%= t %> </span>
               <% end %>
             <% end %>
-
             <% if @user.accreditation_list.empty? %>
               未入力です
             <% end %>
@@ -100,7 +108,7 @@
       </div>
     </div>
 
-    <div class="col-md-9 col-sm-12 w-100">
+    <div class="col-md-12">
       <div class="panel panel-default">
         <div class="panel-heading m-3">
           <h3 class="page-header">タグ、趣味</h3>
@@ -113,6 +121,23 @@
 
             <% if @user.tags.pluck(:name).empty? %>
               まだタグを入力していないようです！
+            <% end %>
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-12">
+      <div class="panel panel-default">
+        <div class="panel-heading m-3">
+          <h3 class="page-header">最近の投稿</h3>
+          <p class="page-subtitle">
+            <% @user.posts.includes(:likes, :comments).order(created_at: :desc).first(10).each do |p| %>
+              <%= render "timelines/post", post: p, report: @report %>
+            <% end %>
+
+            <% if @user.posts.empty? %>
+              まだ投稿がありません！
             <% end %>
           </p>
         </div>
